# oneAPI-samples

Libraries/oneVPL/dpcpp-blur/: CMakeLists.txt
Libraries/oneVPL/dpcpp-blur/src/: dpcpp-blur.cpp  vaapi_allocator.h
